--- a/gift.html
+++ b/gift.html
@@ -110,8 +110,8 @@
 	
 	<div class="controls">
 			<button id="stop">Stop</button>
-			<button id="start">Start</button>
-    <p>Grab and move mouse verticaly to change perspective</p>
+			<button id="start">Start or fasten </button>
+    <p>May the planets orbit our love as they orbit the sun. May it expand further than the neverending universe. May our love shine brighter than Sirius. I love you</p>
 	</div>
 
 	</div>
